// protoのバージョンの宣言
syntax = "proto3";

// protoファイルから自動生成させるGoのコードの置き先
// (詳細は4章にて)
option go_package = "pkg/grpc";

// packageの宣言
package myapp;

// サービスの定義
service GreetingService {
	// サービスが持つメソッドの定義（Unary RPC）
	rpc Hello (HelloRequest) returns (HelloResponse); 
	// サーバーストリーミングRPC(一つのリクエストに対して複数のレスポンスが返ってくる)
	rpc HelloServerStream (HelloRequest) returns (stream HelloResponse);
}

// 型の定義
message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}
